refactor: revert initialization queue checks for operator readiness